# dbsa

./: .gitignore  LICENSE  README.org  README.rst  generate.py  pyproject.toml  setup.py
dbsa/: __init__.py  sequence_generator.py
dbsa/configs/: transformer_dep.yaml
dbsa/criterions/: __init__.py  label_smoothed_cross_entropy_with_dependency.py
dbsa/data/: __init__.py  language_pair_dataset_with_dependency.py
dbsa/models/: __init__.py  transformer_dep.py  transformer_dep_decoder.py  transformer_dep_encoder.py
dbsa/modules/: __init__.py  dbsa.py  transformer_layer.py
dbsa/tasks/: __init__.py  translation_dep.py
examples/ja2en/: test.en  test.en.dep  test.ja  test.ja.dep  train.en  train.en.dep  train.ja  train.ja.dep  valid.ja
scripts/: bpe_dependency.py  extract_heads.py  prepare-aspec.sh  prepare-kftt.sh  run_stanza.py
