[tool.poetry]
name = "dbsa"
version = "0.1.0"
description = "Dependency-Based Self-Attention for Transformer NMT (Deguchi et al., 2019)"
authors = ["Hiroyuki Deguchi <deguchi@ai.cs.ehime-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fairseq = {git = "https://github.com/de9uch1/fairseq.git", branch = "return_self_attn"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fairseq-dbsa-generate = "generate:cli_main"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
