[tool.poetry]
name = "dbsa"
version = "0.2.2"
description = "Dependency-Based Self-Attention for Transformer NMT (Deguchi et al., 2019)"
authors = ["Hiroyuki Deguchi <deguchi@ai.cs.ehime-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fairseq = {git = "https://github.com/pytorch/fairseq.git", branch = "main"}
nlpack = {git = "https://github.com/de9uch1/nlpack.git"}
stanza = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.scripts]
fairseq-dbsa-generate = "dbsa.cli.generate:cli_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
